- Adjusted SidebarEx: accomodate more PHP versions (no functional change)
- Adjusted AddScriptCss: accomodate more PHP versions (no functional change)
- Adjusted PageFunctions: accomodate more PHP versions (no functional change)
- HierarchicalNamespacePermissions: added page level restrictions enforcement
- Added 'PageRestrictions' extension: adds 'read' right enforcement at the page level etc.
- Added 'disable' command in ParserPhase2 (addresses documentation case in NS_FILESYSTEM) (!)
- Added 'WatchLog' extension
- Added 'RecentChangesManager' extension
- Adapter 'Job::factory' method to receive custom jobs as per MW1.11
- Added 'skipcaptcha' right support
- Integrated MW1.11 API
- Added API to rights management process (new namespace NS_API)
- Updated 'hnpClass' to account for API
- Added 'FetchPartnerRC' extension (part of Replication functionality which is ongoing)
- Added auto-detection of 'wfScript' function for MW1.11 API integration.
- Added 'ClockTick' extension (added 'ClockTickEvent' hook)
- Added 'clocktick.php' script
- Added 'TaskScheduler' extension (requires 'ClockTick' extension / 'ClockTickEvent' generator such as 'clocktick.php' script)
- Enhanced 'StubManager' to fully handle logging
- REPLICATION FUNCTIONALITY: added 'FetchPartnerRC' extension
- REPLICATION FUNCTIONALITY: added 'FetchPartnerLog' extension
- StubManager: Minor fixes (removal of some PHP warnings)
- hnpClass: Minor fixes (removal of some PHP warnings) (NO FUNCTIONAL CHANGES)
- ForeachFunctions: Minor fixes (removal of some PHP warnings)
- FileManager: disabled 'auto summary' features upon page creation
- Added some documentation files
- PageFunctions: added 'varaset', 'varaget' magic words
- PageFunctions: added 'PageVarGet' and 'PageVarSet' hooks
- Added 'RegexTools' extension
- Added 'RegexNamespaceContext' extension
- Integrated 'MakeSysop' extension
- Integrated 'DeSysop' extension
===============================
REL1_10_9: (released ...) 
- 